<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_for_sending_data_new_opinion">

        <LinearLayout
            android:id="@+id/linear_new_opinion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/linear_spinner_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/select_the_city" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/circle_bg_color"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner_city"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/add_city_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:text="@string/add_a_new_city" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_spinner_hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_your_hospital" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/circle_bg_color">

                    <Spinner
                        android:id="@+id/spinner_hospital"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/add_hospital_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/add_a_new_hospital" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_spinner_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_the_service" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/circle_bg_color">
                    <Spinner
                        android:id="@+id/spinner_service_hospital"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/add_service_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:text="@string/add_a_new_service" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/your_opinion" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_bg_color">
                <EditText
                    android:id="@+id/edit_for_subject_new_opinion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:inputType="textLongMessage|text|textMultiLine"
                    android:autofillHints="Add Comment"
                    android:padding="2dp"
                    android:maxLength="500" />
            </com.google.android.material.textfield.TextInputLayout>

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="6dp"
                android:numStars="5"
                android:stepSize="0.5"
                android:theme="@style/RatingBar" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_for_sending_data_new_opinion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/green_onclick_white"
        android:text="@string/send_your_opinion"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

    <ProgressBar
        android:id="@+id/progressbar_for_sending_new_opinion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:visibility="gone" />
</RelativeLayout>