<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/list_item_spacing_half"
    tools:context=".bottomSheet.FragmentBottomCity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_close_city"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@android:color/white"
                android:contentDescription="@string/close_bottom_sheet_fragment"
                app:srcCompat="@drawable/ic_close" />

            <View
                android:layout_width="30dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/name_toolbar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/new_city_bottom_sheet"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />

            <!--            <ImageButton-->
            <!--                android:layout_width="?attr/actionBarSize"-->
            <!--                android:layout_height="?attr/actionBarSize"-->
            <!--                android:background="?attr/selectableItemBackgroundBorderless"-->
            <!--                android:tint="@android:color/white"-->
            <!--                app:srcCompat="@drawable/ic_create" />-->

            <!--            <ImageButton-->
            <!--                android:layout_width="?attr/actionBarSize"-->
            <!--                android:layout_height="?attr/actionBarSize"-->
            <!--                android:background="?attr/selectableItemBackgroundBorderless"-->
            <!--                android:tint="@android:color/white"-->
            <!--                app:srcCompat="@drawable/ic_more_vert" />-->

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="@dimen/spacing_x_medium">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/circle_bg_color">

                <EditText
                    android:id="@+id/edit_for_city_bottom_sheet_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/add_a_new_hospital"
                    android:hint="@string/add_a_new_city"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_below="@+id/text_input_city"
                android:layout_marginTop="@dimen/spacing_xxx_large"
                android:id="@+id/button_bottom_sheet_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/spacing_x_medium"
                android:background="@drawable/green_onclick_white"
                android:text="@string/send_your_request"
                android:textColor="@color/colorWhite" />

            <ProgressBar
                android:layout_below="@+id/text_input_city"
                android:layout_marginTop="@dimen/spacing_xxx_large"
                android:id="@+id/progress_bar_bottom_sheet_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/spacing_x_medium"
                android:visibility="gone" />
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
</LinearLayout>